# minute_empire

./: .env.example  .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/minute_empire/: DOMAIN_MODEL_GUIDE.md  main.py
backend/minute_empire/api/: api_models.py
backend/minute_empire/core/: authentication.py  config.py  registration.py  world.py
backend/minute_empire/db/: mongodb.py
backend/minute_empire/db/scripts/: clean_db.py  mongo_test.py
backend/minute_empire/domain/: __init__.py  building.py  resource.py  resource_field.py  troop.py  user.py  village.py  world.py
backend/minute_empire/repositories/: __init__.py  troop_action_repository.py  troops_repository.py  user_repository.py  village_repository.py
backend/minute_empire/schemas/: schemas.py
backend/minute_empire/services/: README.md  __init__.py  authentication_service.py  building_service.py  command_service.py  registration_service.py  resource_field_service.py  resource_service.py  task_scheduler.py  timed_tasks_service.py  troop_action_service.py  websocket_service.py
docker/: .env.example  docker-compose.yml
docs/: plan.xlsx
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/minute_empire_frontend/: package-lock.json  package.json
frontend/minute_empire_frontend/src/: App.vue  main.js
frontend/minute_empire_frontend/src/components/: ConstructionTasksDisplay.vue  LoginForm.vue  MapHoverDialog.vue  MapSelectionDialog.vue  RegistrationForm.vue  TroopActionTaskDisplay.vue  VillageResourcesDisplay.vue
(+23 files in other folders)
