[tool.poetry]
name = "minute-empire"
version = "0.1.0"
description = ""
authors = ["Leonardo Mariga <leomariga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pymongo = "^4.11.2"
python-dotenv = "^1.0.1"
motor = "^3.7.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pyjwt = "^2.10.1"
passlib = "^1.7.4"
websockets = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
